<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.1.RELEASE</version>
	</parent>

	<groupId>org.snomed.authoring</groupId>
	<artifactId>authoring-services</artifactId>
	<version>5.13.0-SNAPSHOT</version>

	<properties>
		<java.version>1.8</java.version>
		<packageName>${project.artifactId}</packageName>
		<execFinalName>${project.build.finalName}.jar</execFinalName>
		<springfox-swagger.version>2.7.0</springfox-swagger.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.ihtsdo.otf.common</groupId>
			<artifactId>otf-common</artifactId>
			<version>2.1.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.ihtsdo.otf</groupId>
			<artifactId>ihtsdo-spring-sso</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.ihtsdo.otf</groupId>
			<artifactId>spellcheck-core</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.snomed.otf</groupId>
			<artifactId>snomed-boot</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>io.kaicode</groupId>
			<artifactId>branch-path-uri-rewrite-filter</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-activemq</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-broker</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
			<groupId>net.rcarz</groupId>
			<artifactId>jira-client</artifactId>
			<version>0.6.1-IHTSDO</version>
		</dependency>
		<dependency>
			<!-- For Jira OAuth -->
			<groupId>com.google.gdata</groupId>
			<artifactId>core</artifactId>
			<version>1.47.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${springfox-swagger.version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${springfox-swagger.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk</artifactId>
			<version>1.10.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>org.ihtsdo.snowowl.authoring.single.api.Application</mainClass>
					<additionalProperties>
						<encoding.source>UTF-8</encoding.source>
						<encoding.reporting>UTF-8</encoding.reporting>
						<java.source>${maven.compiler.source}</java.source>
						<java.target>${maven.compiler.target}</java.target>
					</additionalProperties>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>ihtsdo-releases</id>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>false</enabled></snapshots>
			<url>https://maven.ihtsdotools.org/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>ihtsdo-snapshots</id>
			<releases><enabled>false</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
			<url>https://maven.ihtsdotools.org/content/repositories/snapshots/</url>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>deb</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.vafer</groupId>
						<artifactId>jdeb</artifactId>
						<version>1.1.1</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>jdeb</goal>
								</goals>
								<configuration>
									<deb>${project.build.directory}/${packageName}-${project.version}-all.deb</deb>
									<controlDir>${basedir}/src/deb/control</controlDir>
									<snapshotExpand>true</snapshotExpand>
									<snapshotEnv>BUILD_NUMBER</snapshotEnv>
									<verbose>true</verbose>
									<classifier>all</classifier>
									<signPackage>false</signPackage>
									<dataSet>
										<data>
											<src>${project.build.directory}/${execFinalName}</src>
											<dst>app.jar</dst>
											<type>file</type>
											<mapper>
												<type>perm</type>
												<prefix>/opt/${packageName}/</prefix>
											</mapper>
										</data>
										<data>
											<src>${basedir}/src/deb/supervisor.conf</src>
											<dst>/etc/supervisor/conf.d/${packageName}.conf</dst>
											<type>file</type>
										</data>
									</dataSet>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<repository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Releases</name>
			<url>https://maven.ihtsdotools.org/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Snapshots</name>
			<url>https://maven.ihtsdotools.org/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>
